--- a/tools/Makefile.unix
+++ b/tools/Makefile.unix
@@ -124,7 +124,7 @@ MKEXPORT_ARGS += -u
 endif
 
 ifneq ($(APPDIR),)
-ifneq ($(shell [ -e $(APPDIR)/Makefile ] && echo yes),)
+ifneq ($(shell [ -e $(APPDIR)/Makefile ] && echo yes),)AAAANl
 MKEXPORT_ARGS += -a "$(APPDIR)"
 MKEXPORT_ARGS += -m "$(MAKE)"
 endif
